--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Axios -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
-  <body>
+  <body onload="start()">
     <div
       class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm"
     >
@@ -49,7 +49,7 @@
             <div class="card-header">
               <h4 class="my-0 font-weight-normal">Aujourd'hui</h4>
             </div>
-            <div class="card-body">
+            <div class="card-body" >
               <h2 id="today-forecast-main" class="card-title">
               </h2>
               <div>
@@ -57,7 +57,6 @@
                 <div id="icon-weather-container" ></div>
                 <h3 id="today-forecast-temp"> </h3>
               </div>
-              <body onload="start()"></body>
             </div>
           </div>
         </div>
@@ -69,12 +68,12 @@
             <h4 class="my-0 font-weight-normal">Demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="tomorrow-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="tomorrow-forecast-more-info"></p>
+              <div id="tomorrow-icon-weather-container" ></div>
+              <h3 id="tomorrow-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -83,12 +82,12 @@
             <h4 class="my-0 font-weight-normal">Après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="aftertomorrow-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="aftertomorrow-forecast-more-info"></p>
+              <div id="aftertomorrow-icon-weather-container" ></div>
+              <h3 id="aftertomorrow-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -97,12 +96,12 @@
             <h4 class="my-0 font-weight-normal">Encore après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="afteraftertomorrow-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container" ></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="afteraftertomorrow-forecast-more-info"></p>
+              <div id="afteraftertomorrow-icon-weather-container" ></div>
+              <h3 id="afteraftertomorrow-forecast-temp"> </h3>
             </div>
           </div>
         </div>
