--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
               <h4 class="my-0 font-weight-normal">Aujourd'hui</h4>
             </div>
             <div class="card-body" >
-              <h2 id="today-forecast-main" class="card-title">
+              <h2 id="day0-forecast-main" class="card-title">
               </h2>
               <div>
-                <p id="today-forecast-more-info"></p>
-                <div id="icon-weather-container" ></div>
-                <h3 id="today-forecast-temp"> </h3>
+                <p id="day0-forecast-more-info"></p>
+                <div id="icon0-weather-container" ></div>
+                <h3 id="day0-forecast-temp"> </h3>
               </div>
             </div>
           </div>
@@ -68,12 +68,12 @@
             <h4 class="my-0 font-weight-normal">Demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="tomorrow-forecast-main" class="card-title">
+            <h2 id="day1-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="tomorrow-forecast-more-info"></p>
-              <div id="tomorrow-icon-weather-container" ></div>
-              <h3 id="tomorrow-forecast-temp"> </h3>
+              <p id="day1-forecast-more-info"></p>
+              <div id="icon1-weather-container" ></div>
+              <h3 id="day1-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -82,12 +82,12 @@
             <h4 class="my-0 font-weight-normal">Après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="aftertomorrow-forecast-main" class="card-title">
+            <h2 id="day2-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="aftertomorrow-forecast-more-info"></p>
-              <div id="aftertomorrow-icon-weather-container" ></div>
-              <h3 id="aftertomorrow-forecast-temp"> </h3>
+              <p id="day2-forecast-more-info"></p>
+              <div id="icon2-weather-container" ></div>
+              <h3 id="day2-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -96,12 +96,12 @@
             <h4 class="my-0 font-weight-normal">Encore après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="afteraftertomorrow-forecast-main" class="card-title">
+            <h2 id="day3-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="afteraftertomorrow-forecast-more-info"></p>
-              <div id="afteraftertomorrow-icon-weather-container" ></div>
-              <h3 id="afteraftertomorrow-forecast-temp"> </h3>
+              <p id="day3-forecast-more-info"></p>
+              <div id="icon3-weather-container" ></div>
+              <h3 id="day3-forecast-temp"> </h3>
             </div>
           </div>
         </div>
